# ruyi-pytest

./: README.md  conftest.py  pyproject.toml
tests/: helpers.py
tests/basic/: test_ruyi_admin.py  test_ruyi_box64.py  test_ruyi_completion.py  test_ruyi_extract.py  test_ruyi_install.py  test_ruyi_list.py  test_ruyi_version.py
